<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.vpa.NewMemo" >

    <item
        android:id="@+id/memo_save"
        android:icon="@drawable/ic_menu_save"
        android:orderInCategory="5"
        android:showAsAction="always"
        android:title="@string/action_memo_save"/>
    <item
        android:id="@+id/memo_cancel"
        android:icon="@drawable/ic_clear_disabled"
        android:orderInCategory="4"
        android:showAsAction="always"
        android:title="@string/action_memo_cancel"/>
    <item
        android:id="@+id/memo_clear"
        android:icon="@drawable/ic_menu_delete"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/menu_clear"/>
    <item
        android:id="@+id/memo_edit"
        android:icon="@drawable/ic_menu_edit"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/memo_edit"/>
    <item
        android:id="@+id/memo_lock"
        android:icon="@drawable/ic_lock"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/memo_lock"/>
    

</menu>